# LLaVA-Reasoner-DPO

./: .gitignore  README.md  pyproject.toml
data_processing/: __init__.py  image_utils.py  utils.py
llava_reasoner/llava/model/: builder.py  llava_arch.py
llava_reasoner/llava/model/language_model/: llava_llama.py
llava_reasoner/llava/model/multimodal_encoder/: clip_encoder.py
llava_reasoner/llava/train/: llava_trainer.py  train.py
llava_reasoner/scripts/: zero2.json
llava_reasoner/scripts_dpo/: dpo_llava_reasoner_preview.sh  run_dpo.py
llava_reasoner/scripts_sft/: sft_direct+cot.sh  sft_direct+cot_preview.sh
llava_reasoner/trl/trainer/: dpo_trainer.py
setup/: install_hf.sh  requirements.txt  set_path.sh  setup_env.sh  setup_train_data.sh
